Minio support. File system storage transfered to Minio.